--- a/Final Capstone Battle of neighbourhoods-Copy1.ipynb
+++ b/Final Capstone Battle of neighbourhoods-Copy1.ipynb
@@ -6925,10 +6925,10 @@
     "# one hot encoding\n",
     "df_Canton_other_venues_onehot = pd.get_dummies(df_Canton_other_venues[['Venue_Category']], prefix = \"\", prefix_sep = \"\")\n",
     "\n",
-    "# add Medical School Name column back to dataframe\n",
+    "# add Place Name column back to dataframe\n",
     "df_Canton_other_venues_onehot['Place'] = df_Canton_other_venues['Place']\n",
     "\n",
-    "# move Medical School Name column to the first column\n",
+    "# move Place Name column to the first column\n",
     "fixed_columns = [df_Canton_other_venues_onehot.columns[-1]] + list(df_Canton_other_venues_onehot.columns[:-1])\n",
     "df_Canton_other_venues_onehot = df_Canton_other_venues_onehot[fixed_columns]\n",
     "\n",
@@ -12868,7 +12868,7 @@
     "\n",
     "\n",
     "\n",
-    "The clusters did not work out like I had hoped they would. There were a few clusters of one medical school, and a couple of clusters were exceptionally large groups (one of which did not seem to have many venues in common). However, most of the clusters identified a fair number of schools, and they did have some other restaurant categories in common. The clusters will help in finding nearby food trucks, deli/bodegas, bakeries, sandwich places, fast food restaurants, food courts, American restaurants, Indian restaurants, wings joints, snack places, Czech restaurants, cafeterias, dim sum restaurants, diners, Eastern European restaurants, falafel restaurants, Ethiopian restaurants, empanada restaurants, and dumpling restaurants. I thought that the elbow method would reveal a more obvious value for k. I suppose I could have simply chosen a smallet value for k and forced some of the clusters to be larger, but I do not know that that would have resulted in better clusters."
+    "The clusters did not work out like I had hoped they would. There were a few clusters of places, and a couple of clusters were exceptionally large groups (one of which did not seem to have many venues in common). However, most of the clusters identified a fair number of places, and they did have some other restaurant categories in common. The clusters will help in finding nearby food trucks, deli/bodegas, bakeries, sandwich places, fast food restaurants, food courts, American restaurants, Indian restaurants, wings joints, snack places, Czech restaurants, cafeterias, dim sum restaurants, diners, Eastern European restaurants, falafel restaurants, Ethiopian restaurants, empanada restaurants, and dumpling restaurants. I thought that the elbow method would reveal a more obvious value for k. I suppose I could have simply chosen a smallet value for k and forced some of the clusters to be larger, but I do not know that that would have resulted in better clusters."
    ]
   }
  ],
